sort zoom layout issue, change margins for paragraphs and lists

--- a/css/main.css
+++ b/css/main.css
@@ -720,7 +720,7 @@ body {
       padding: 0 5px;
       width: 100%; }
     .all-work-card-image {
-      background-color: #F5F5DC;
+      background-color: #FFF;
       height: 180px;
       width: 100%;
       position: relative;
@@ -829,14 +829,9 @@ body {
 .post {
   margin: 65px auto 0;
   width: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  align-content: center;
-  align-items: center;
   font-family: "Raleway", sans-serif; }
   .post-contents {
-    margin: 30px 0;
+    margin: 30px auto;
     text-align: center;
     width: 90%; }
     .post-contents a {
@@ -849,9 +844,10 @@ body {
     .post-contents h1 {
       margin: 50px 0; }
     .post-contents h2, .post-contents h3, .post-contents h4, .post-contents h5, .post-contents h6 {
-      margin: 60px auto 30px; }
+      margin: 50px auto 25px; }
     .post-contents li {
       font-size: 14px;
+      margin: 10px auto;
       padding: 0 10px; }
     .post-contents p, .post-contents ul {
       margin-left: auto;
@@ -859,6 +855,7 @@ body {
       text-align: justify; }
     .post-contents p {
       font-size: 14px;
+      margin: 30px auto;
       width: 100%;
       max-width: 100vw; }
     .post-contents ul {
@@ -868,7 +865,7 @@ body {
       max-width: 1920px;
       overflow: hidden;
       position: relative;
-      margin: 0; }
+      margin-top: 0; }
       .post-contents:nth-child(1) img {
         width: 100%; }
     .post-contents:nth-child(2) {
