--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -20,7 +20,7 @@ $color-bg-cta-allwork: #111;                    // Background color "all work" m
 $color-bg-cta-contact: #111;                    // Background color "contact" modules
 $color-bg-allwork: #FFF;                        // Background color for footer module
 $color-bg-card: #F5F5F5;                        // Background color for cards
-$color-bg-card-image: #F5F5DC;                  // Background color for card images (used for transparent images)
+$color-bg-card-image: #FFF;                     // Background color for card images (used for transparent images)
 $color-bg-footer: #EEE;                         // Background color for footer module
 $color-bg-header: #222;                         // Background color for header module
 $color-bg-project: #CCC;                        // Background color for project modules (even only)
